--- a/storefront-child/build_assets/scss/blocks/_baloon-columns.scss
+++ b/storefront-child/build_assets/scss/blocks/_baloon-columns.scss
@@ -363,7 +363,7 @@
             cursor: pointer;
             width: 128px;
             height: 494px;
-            transition: width 0.5s ease;
+            transition: width 0.7s ease-in-out;
             border-radius: 40px;
             @media (max-width: 1400px) {
                 width: 10%;
@@ -378,7 +378,9 @@
             }
             img {
                 height: 100%;
+                width: 100%;
                 object-fit: cover;
+                object-fit: center center;
                 border-radius: 40px;
                 @media (max-width: 1024px) {
                     border-radius: 30px;
@@ -391,7 +393,7 @@
                 width: 744px;
                 height: 494px;
                 border-radius: 40px;
-                transition: width 0.5s ease;
+                transition: width 0.7s ease-in-out;
                 @media (max-width: 1400px) {
                     width: 55%;
                 }
@@ -631,7 +633,11 @@
         .prev-arrow {
             left: -32px;
             cursor: pointer;
-
+            &:hover {
+               path {
+                   stroke: #D9E7E1;
+               }
+            }
             @media (max-width: 1027px) {
                 left: -23px;
             }
@@ -639,6 +645,11 @@
         .next-arrow {
             right: -36px;
             cursor: pointer;
+            &:hover {
+                path {
+                    stroke: #D9E7E1;
+                }
+            }
             @media (max-width: 1027px) {
                 right: -27px;
             }
