--- a/storefront-child/build_assets/scss/blocks/_global-featured-products.scss
+++ b/storefront-child/build_assets/scss/blocks/_global-featured-products.scss
@@ -198,6 +198,9 @@
             padding: 4px 6px;
             border-radius: 40px;
             margin-right: 8px;
+            @media (max-width: 450px) {
+                font-size: 10px;
+            }
         }
     }
 }
