--- a/storefront-child/build_assets/scss/custom-dropdown.scss
+++ b/storefront-child/build_assets/scss/custom-dropdown.scss
@@ -78,10 +78,6 @@
         left: 0;
         right: 0;
         background: #fff;
-        transition: all .5s;
-        opacity: 0;
-        visibility: hidden;
-        pointer-events: none;
         z-index: 2;
         border: 2px solid #d9e7e1;
         border-top: none;
@@ -155,6 +151,15 @@
     opacity: 1;
     visibility: visible;
     pointer-events: all;
+    max-height: 500px;
+    transition: opacity 0.5s ease-in-out, max-height 0.5s ease-in-out;
+}
+
+.select .custom-options {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    max-height: 1px;
 }
 
 .select.open .select__trigger {
