design review - part 5

--- a/storefront-child/build_assets/scss/blocks/_baloon-columns.scss
+++ b/storefront-child/build_assets/scss/blocks/_baloon-columns.scss
@@ -660,10 +660,11 @@
 
 .baloon-colums__slider-clients {
     &__wrapper {
-        height: 40px;
+        height: 90px;
         width: 100%;
         position: relative;
         overflow: hidden;
+        bottom: 20px;
     }
     &__inner {
         position: relative;
