--- a/storefront-child/build_assets/scss/blocks/_checkout.scss
+++ b/storefront-child/build_assets/scss/blocks/_checkout.scss
@@ -90,6 +90,10 @@ li.select2-results__option.select2-results__option--highlighted {
         position: relative;
         pointer-events: initial;
         margin-bottom: 62px;
+        padding: 0 15px;
+        @media (max-width: 450px) {
+            padding: 0;
+        }
     }
 }
 .woocommerce-checkout-review-order-table {
@@ -370,15 +374,15 @@ div#orddd_datepicker_0 {
 }
 #payment .payment_methods li .payment_box fieldset {
     background-color: white !important;
-    padding: 88px 0 0 !important;
+    padding: 35px 0 0 !important;
     @media (max-width: 1176px) {
         padding: 11px 0 0 !important;
     }
     @media (max-width: 1028px) {
-        padding: 80px 0 0 !important;
+        padding: 35px 0 0 !important;
     }
     @media (max-width: 900px) {
-        padding: 64px 0 0!important;
+        padding: 35px 0 0!important;
     }
 }
 .woocommerce-SavedPaymentMethods-saveNew label {
@@ -387,7 +391,7 @@ div#orddd_datepicker_0 {
     font-weight: 400 !important;
 }
 .payment_method_stripe {
-    padding: 16px 16px 16px 0 !important;
+    padding: 16px 16px 0px 0 !important;
 }
 h3.custom-payment-heading {
     width: 100%;
@@ -715,6 +719,11 @@ tfoot .cart-subtotal {
     font-weight: 400;
     line-height: normal;
     letter-spacing: -0.32px;
+    transition: 0.25s;
+    &:hover {
+        box-shadow: inset 0 0 0 2em $white !important;
+        color: $seaFoam;
+    }
 }
 // .select2-dropdown.select2-dropdown--below {
 //     width: max-content !important;
@@ -745,8 +754,14 @@ tfoot .cart-subtotal {
         background-color: white;
         border-radius: 10px;
         cursor: pointer;
+        transition: 0.25s;
+        &:hover {
+            box-shadow: inset 0 0 0 2em $seaFoam !important;
+            color: white !important;
+        }
     }
 }
+
 .title-billing-address, .title-delivery-address, .title-payment {
     display: none;
     h3 {
@@ -764,6 +779,10 @@ tfoot .cart-subtotal {
     &.open {
         width: 100%;
         display: block;
+        padding: 0 15px;
+        @media (max-width: 450px) {
+            padding: 0;
+        }
     }
 }
 .checkout.woocommerce-checkout{
