--- a/storefront-child/build_assets/scss/blocks/_footer.scss
+++ b/storefront-child/build_assets/scss/blocks/_footer.scss
@@ -215,9 +215,10 @@
                 font-size: $p-regular;
                 font-weight: $p-regular-weight;
                 padding: 7px 17px;
-            
+                transition: 0.25s;
+                
                 &:hover {
-                    background-color: $white;
+                    box-shadow: inset 0 0 0 2em $white;
                     color: $seaFoam;
                 }
 
