--- a/storefront-child/build_assets/scss/blocks/_global-featured-products.scss
+++ b/storefront-child/build_assets/scss/blocks/_global-featured-products.scss
@@ -62,8 +62,10 @@
         border-radius: 10px;
         margin: 0 auto;
         margin-top: 32px;
+        text-decoration: none !important;
+        transition: 0.25s;
         &:hover {
-            background-color: $mercury;
+            box-shadow: inset 0 0 0 2em $mercury !important;
         }
         &:focus {
             outline: none !important;
