--- a/storefront-child/build_assets/scss/blocks/_hero.scss
+++ b/storefront-child/build_assets/scss/blocks/_hero.scss
@@ -192,7 +192,7 @@
 
                 .primary-button {
                     &:hover {
-                        background-color: white;
+                        box-shadow: inset 0 0 0 2em $white;
                         color: black;
                     }
                 }
