--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -87,14 +87,14 @@ body {
     padding: 9px 24px;
     display: block;
     width: fit-content;
-
+    transition: 0.25s;
 
     &:hover {
-        background-color: $mercury;
+        box-shadow: inset 0 0 0 2em $mercury;
     }
 
     &:active, &:focus {
-        background-color: $seaFoam;
+        box-shadow: inset 0 0 0 2em $mercury;
     }
 }
 
@@ -106,14 +106,15 @@ body {
     font-weight: $p-regular-weight;
     padding: 16px 24px;
     border: 2px $mercury solid;
+    transition: 0.25s;
 
     &:hover {
-        background-color: $white;
+        box-shadow: inset 0 0 0 2em $mercury;
         border: 2px $seaFoam solid;
     }
 
     &:active, &:focus, &.active {
-        background-color: $mercury;
+        box-shadow: inset 0 0 0 2em $mercury;
         border: 2px $mercury solid;
     }
 }
