--- a/storefront-child/build_assets/scss/custom-dropdown.scss
+++ b/storefront-child/build_assets/scss/custom-dropdown.scss
@@ -83,7 +83,7 @@
         border-top: none;
         border-radius: 0 0 10px 10px;
         padding: 6px;
-
+        z-index: 3;
         a {
             text-decoration: none;
             text-transform: none;
